--- a/templates/selectDnD.html
+++ b/templates/selectDnD.html
@@ -82,7 +82,7 @@ function drop(ev) {
 
   {{range $index, $game := .Games}}
   <tr ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
-   <td><input type="number" name="confidence{{$game.TeamV}}" min="1" max="{{$.NumGames}}" value={{$game.Confidence}}></td>
+   <td><input type="number" name="confidence{{$game.TeamV}}" min="1" max="16" value={{$game.Confidence}}></td>
    <td>{{$game.Status}}</td>
    <td><input type="radio" name="{{$game.TeamV}}" value="away" {{$game.CheckedV}}>{{$game.TeamV}} vs 
        <input type="radio" name="{{$game.TeamV}}" value="home" {{$game.CheckedH}}>{{$game.TeamH}}</td>
