Select provides link to Drag-n-Drop

--- a/templates/select.html
+++ b/templates/select.html
@@ -27,6 +27,8 @@
 
 <p>NFL Week {{$.UWeek}}</p>
 
+<p><a href=../selectDnD/{{$.Week}}>Drag N Drop form</a></p>
+
 <form action="/save/{{$.Week}}" method="POST">
 <div><input type="submit" value="Save"></div>
 <table class="sortable">
