Confidence readonly & sorted for Drag and Drop
For DragNDrop page
-Confidence readonly
-Games are sorted by confidences
-Sorting only enabled for Confidence column

Added instructions on sorting to the "select" page.

--- a/templates/select.html
+++ b/templates/select.html
@@ -23,6 +23,7 @@
 <ul>
 <li>Confidence levels must be unique</li>
 <li>You can make a pick for a given game just before gametime</li>
+<li>Click on a column heading to sort a column</li>
 </ul>
 
 <p>NFL Week {{$.UWeek}}</p>
