--- a/templates/selectDnD.html
+++ b/templates/selectDnD.html
@@ -65,8 +65,8 @@ function drop(ev) {
 
 <h2>Enter Picks and Confidence Level</h2>
 <ul>
-<li>Confidence levels must be unique</li>
-<li>You can make a pick for a given game just before gametime</li>
+<li>Select winner of each game</li>
+<li>Drag and drop rows up or down to change confidence levels</li>
 </ul>
 
 <p>NFL Week {{$.UWeek}}</p>
@@ -77,13 +77,13 @@ function drop(ev) {
 
   <tr>
    <th>Confidence</th>
-   <th>Game Status</th>
-   <th>Teams</th>
+   <th class="sorttable_nosort">Game Status</th>
+   <th class="sorttable_nosort">Teams</th>
   </tr>
 
   {{range $index, $game := .Games}}
   <tr ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)">
-   <td><input type="number" name="confidence{{$game.TeamV}}" min="1" max="16" value={{$game.Confidence}}></td>
+   <td><input type="number" name="confidence{{$game.TeamV}}" value={{$game.Confidence}} readonly></td>
    <td>{{$game.Status}}</td>
    <td><input type="radio" name="{{$game.TeamV}}" value="away" {{$game.CheckedV}}>{{$game.TeamV}} vs 
        <input type="radio" name="{{$game.TeamV}}" value="home" {{$game.CheckedH}}>{{$game.TeamH}}</td>
