--- a/templates/user.html
+++ b/templates/user.html
@@ -44,9 +44,9 @@ Today is {{.Date}}
 <fieldset>
 <legend>Standings</legend>
  <table class="sortable">
-  <tr> <th>User</th> <th>Points</th> <th>Played</th> <th>Won</th> <th>Ave/Week</th></tr>
+  <tr> <th>User</th> <th>Points</th> <th>Played</th> <th>Won</th> <th>Ave/Week</th> <th>Picks</th> </tr>
   {{range $index, $srow := .Standings}}
-    <tr> <td>{{$srow.Name}}</td> <td>{{$srow.Total}}</td> <td>{{$srow.WeeksPlayed}}</td> <td>{{$srow.WeeksWon}}</td> <td>{{$srow.AvePerWeek}}</td> </tr>
+    <tr> <td>{{$srow.Name}}</td> <td>{{$srow.Total}}</td> <td>{{$srow.WeeksPlayed}}</td> <td>{{$srow.WeeksWon}}</td> <td>{{$srow.AvePerWeek}}</td> <td>{{$srow.GoodPicks}}</td> </tr>
   {{end}}
  </table>
 </fieldset>
