--- a/templates/selectDnD.html
+++ b/templates/selectDnD.html
@@ -1,78 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>FB Confidence Pool</title>
 <link rel="stylesheet" type="text/css" href="../../resources/styles.css">
 <script type="text/javascript" src="../../resources/sorttable.js?version=2"></script>
-<script>
-
-function moveRowEntry(sIndex, tIndex) {
-    var i;
-    var table = document.getElementById("selectTable");
-    var rows = table.getElementsByTagName("TR");
-
-    if (tIndex > sIndex) {
-        /* bubble down */
-        for (i = sIndex; i < tIndex; i++) {
-            rows[i].parentNode.insertBefore(rows[i+1], rows[i]);
-            var tmp = rows[i].cells[0].children[0].value;
-            rows[i].cells[0].children[0].value = rows[i+1].cells[0].children[0].value;
-            rows[i+1].cells[0].children[0].value = tmp;
-        }
-    }
-    if (sIndex > tIndex) {
-        /* bubble up */
-        for (i = sIndex-1; i >= tIndex; i--) {
-            rows[i].parentNode.insertBefore(rows[i+1], rows[i]);
-            var tmp = rows[i].cells[0].children[0].value;
-            rows[i].cells[0].children[0].value = rows[i+1].cells[0].children[0].value;
-            rows[i+1].cells[0].children[0].value = tmp;
-        }
-    } 
-}
-
-function allowDrop(ev) {
-    ev.preventDefault();
-}
-
-function drag(ev) {
-    ev.dataTransfer.setData("text", ev.target.rowIndex);
-}
-
-function drop(ev) {
-    ev.preventDefault();
-
-    var sIndex = ev.dataTransfer.getData("text");
-    var tCell = ev.target;  // target cell, for some reason a TD rather than TR
-    var tRow = tCell.parentNode; // get target row
-    var tIndex = tRow.rowIndex;
-
-    /* make sure they are numbers not strings */
-    sIndex = Number(sIndex);
-    tIndex = Number(tIndex);
-
-    moveRowEntry(sIndex, tIndex);
-}
-
-function touchMoveFunc(event) {
-  if (event.touches.length == 1) {
-    // prevents the touch move from causing scrolling
-    event.preventDefault();
-  }
-}
-
-function touchEndFunc(event) {
-  var touch = event.changedTouches[0];
-  var dst = document.elementFromPoint(touch.clientX, touch.clientY);
-  if (dst.nodeName == "TD") {
-    var dstRowIndex = dst.parentNode.rowIndex;
-    var srcRowIndex = event.currentTarget.rowIndex;
-    moveRowEntry(srcRowIndex, dstRowIndex);
-  }
-}
-
-</script>
 </head>
 
 <body>
@@ -108,8 +40,8 @@ function touchEndFunc(event) {
   </tr>
 
   {{range $index, $game := .Games}}
-  <tr ondrop="drop(event)" ondragover="allowDrop(event)" draggable="true" ondragstart="drag(event)" ontouchmove="touchMoveFunc(event)" ontouchend="touchEndFunc(event)">
-   <td><input type="number" name="confidence{{$game.TeamV}}" value={{$game.Confidence}} readonly></td>
+  <tr class="draggable">
+   <td><input type="number" name="confidence{{$game.TeamV}}" value={{$game.Confidence}} style="width: 3em" readonly></td>
    <td>{{$game.Status}}</td>
    <td><input type="radio" name="{{$game.TeamV}}" value="away" {{$game.CheckedV}}>{{$game.TeamV}} vs 
        <input type="radio" name="{{$game.TeamV}}" value="home" {{$game.CheckedH}}>{{$game.TeamH}}</td>
@@ -130,6 +62,163 @@ function touchEndFunc(event) {
   {{end}}
  </table>
 </div>
+
+<script>
+var dragItem;
+var active = false;
+var currentX;
+var currentY;
+var initialX;
+var initialY;
+var xOffset = 0;
+var yOffset = 0;
+
+var selectTable = document.getElementById('selectTable');
+
+var tableRows = document.querySelectorAll('tr.draggable');
+tableRows.forEach(function(item) {
+  item.addEventListener("touchstart", dragStart, false);
+  item.addEventListener("touchend", dragEnd, false);
+  item.addEventListener("touchmove", drag, false);
+  item.addEventListener("mousedown", dragStart, false);
+  item.addEventListener("mouseup", dragEnd, false);
+  item.addEventListener("mousemove", drag, false);
+});
+
+function dragStart(e) {
+  if (this.rowIndex == 0) {
+    console.log("row 0 selected, exiting drawStart");
+    return;
+  }
+  var cursorX;
+  var cursorY;
+  if (e.type === "touchstart") {
+    initialX = e.touches[0].clientX - xOffset;
+    initialY = e.touches[0].clientY - yOffset;
+    cursorX = e.touches[0].clientX;
+    cursorY = e.touches[0].clientY;
+  } else {
+    initialX = e.clientX - xOffset;
+    initialY = e.clientY - yOffset;
+    cursorX = e.clientX;
+    cursorY = e.clientY;
+  }
+  offsetXRadioCell = this.children[2].offsetLeft;
+  if (cursorX > offsetXRadioCell) {
+    // Can not drag from the cell with the radio selects
+    // because there is confusion between drag vs clicking
+    // a radio selector
+    console.log("x > offsetXRadioCell");
+    return;
+  }
+  dragItem = this;
+  active = true;
+}
+
+function dragEnd(e) {
+  if (!active) {
+    return;
+  }
+  active = false;
+
+  var destRow = getHoverElement(currentX+initialX, currentY+initialY);
+
+  xOffset = 0;
+  yOffset = 0;
+  dragItem.style.transform = "none"
+
+  if (typeof dragItem.rowIndex === "undefined") {
+    // not over a row, so don't do anything.
+    console.log("dragEnd: not over a row");
+  } else {
+    // row 0 is the header
+    if (destRow.rowIndex != 0) {
+      moveRowEntry(dragItem.rowIndex, destRow.rowIndex);
+    } else {
+      console.log("dragEnd: over row 0");
+    }
+  }
+}
+
+function drag(e) {
+  if (active) {
+
+    e.preventDefault();
+
+    var cursorX;
+    var cursorY;
+    if (e.type === "touchmove") {
+      currentX = e.touches[0].clientX - initialX;
+      currentY = e.touches[0].clientY - initialY;
+      cursorX = e.touches[0].clientX;
+      cursorY = e.touches[0].clientY;
+    } else {
+      currentX = e.clientX - initialX;
+      currentY = e.clientY - initialY;
+      cursorX = e.clientX;
+      cursorY = e.clientY;
+    }
+
+    // Offset represents distance from initial position.
+    xOffset = currentX;
+    yOffset = currentY;
+
+    // Translate is from the original position, not from current position.
+    //setTranslate(currentX, currentY, dragItem);
+    setTranslate(0, currentY, dragItem);
+  }
+}
+
+function setTranslate(xPos, yPos, el) {
+  el.style.transform = "translate3d(" + xPos + "px, " + yPos + "px, 0)";
+}
+
+function getHoverElement(x,y){
+  var element = "none";
+
+  x += window.pageXOffset;
+  y += window.pageYOffset;
+  tableRows.forEach(function(item) {
+    var el_left = item.offsetLeft + selectTable.offsetLeft;
+    var el_right= el_left + item.offsetWidth;
+    var el_top = item.offsetTop + selectTable.offsetTop;
+    var el_bottom = el_top + item.offsetHeight;
+    if (x >= el_left && x <= el_right) {
+      if (y >= el_top && y <= el_bottom) {
+        if (dragItem.rowIndex != item.rowIndex) {
+          element = item;
+          return false;
+        }
+      }
+    }
+  });
+  return element;
+}
+
+function moveRowEntry(sIndex, tIndex) {
+    var i;
+    var rows = selectTable.getElementsByTagName("TR");
+
+    if (tIndex > sIndex) {
+        /* bubble down */
+        for (i = sIndex; i < tIndex; i++) {
+            rows[i].parentNode.insertBefore(rows[i+1], rows[i]);
+            var tmp = rows[i].cells[0].children[0].value;
+            rows[i].cells[0].children[0].value = rows[i+1].cells[0].children[0].value;
+            rows[i+1].cells[0].children[0].value = tmp;
+        }
+    }
+    if (sIndex > tIndex) {
+        /* bubble up */
+        for (i = sIndex-1; i >= tIndex; i--) {
+            rows[i].parentNode.insertBefore(rows[i+1], rows[i]);
+            var tmp = rows[i].cells[0].children[0].value;
+            rows[i].cells[0].children[0].value = rows[i+1].cells[0].children[0].value;
+            rows[i+1].cells[0].children[0].value = tmp;
+        }
+    }
+}
+</script>
 
 </body>
 </html>
