Initial logo form without any logos

--- a/templates/selectDnD.html
+++ b/templates/selectDnD.html
@@ -27,6 +27,7 @@
 
 <p>NFL Week {{$.UWeek}}</p>
 
+<p><a href=../selectLogo/{{$.Week}}>Drag N Drop Logo form</a></p>
 <p><a href=../select/{{$.Week}}>Old Style Picks form</a></p>
 
 <form action="/save/{{$.Week}}" method="POST">
