Adding SVG for each team

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -41,6 +41,14 @@ tr.draggable:hover {
   background-color: rgba(192, 192, 192, 1.00);
 }
 /* *************************************
+ *  Logos
+ * *************************************/
+img {
+  width: 30px;
+  height: auto;
+  vertical-align: middle;
+}
+/* *************************************
  *  The horizontal menu strip
  * *************************************/
 .menu_strip {
