--- a/templates/selectLogo.html
+++ b/templates/selectLogo.html
@@ -45,9 +45,9 @@
    <td><input type="number" name="confidence{{$game.TeamV}}" value={{$game.Confidence}} style="width: 3em" readonly></td>
    <td>{{$game.Status}}</td>
    <td><input type="radio" name="{{$game.TeamV}}" value="away" {{$game.CheckedV}}>
-        <img src="resources/logos/{{$game.TeamLogoV}}" alt="{{$game.TeamV}}">
+        <img src="../../resources/logos/{{$game.TeamLogoV}}" alt="{{$game.TeamV}}">
        <input type="radio" name="{{$game.TeamV}}" value="home" {{$game.CheckedH}}>
-        <img src="resources/logos/{{$game.TeamLogoH}}" alt="{{$game.TeamH}}">
+        <img src="../../resources/logos/{{$game.TeamLogoH}}" alt="{{$game.TeamH}}">
    </td>
   </tr>
   {{end}}
